# interview-test

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: api_tests.rs  file_demo.rs  main.rs  models.rs  storage.rs
frontend/: Cargo.toml  Dockerfile  index.html  style.css
frontend/src/: lib.rs
frontend/src/components/: bulk_upload.rs  mod.rs  review_form.rs  search_interface.rs
