[package]
name = "semantic-search-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Embeddings and vector search
# fastembed = "2.0"  # Will be added in later tasks
# Note: SPFresh will be added when available or implemented

# File operations
fs2 = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"