[package]
name = "semantic-search-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WebAssembly
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
  "console",
  "File",
  "FileList",
  "FileReader",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlFormElement",
  "Event",
  "EventTarget",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
] }

# HTTP client (WebAssembly compatible)
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Error handling
console_error_panic_hook = "0.1"